[package]
edition = "2021"
name = "bun-utilities"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "4.0.0"
hostname = "0.3.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6.0", default-features = false, features = ["napi8"] }
napi-derive = "2.6.0"
sys-info = "0.9.1"
systemstat = "0.1.11"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
